--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,6 @@
   <script src="cordova.js"></script>
 
   <!-- your app's js -->
-  <!--<script src="lib/angular/angular.js"></script>-->
   <script src="lib/angular-cookie/angular-cookie.js"></script>
   <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
   <script src="js/app.js"></script>
@@ -46,7 +45,7 @@
     <div ng-controller="UserSession">
       {{string}}
       <input type="text" ng-model="loginData.email" placeholder='Email'>
-      <input type="text" ng-model="loginData.password" placeholder='Password'>
+      <input type="password" ng-model="loginData.password" placeholder='Password'>
       <button ng-click="userSignIn()">Login</button>
     </div>
   </ion-content>
