--- a/www/index.html
+++ b/www/index.html
@@ -42,12 +42,16 @@
     <h1 class="title">Ionic Blank Starter</h1>
   </ion-header-bar>
   <ion-content>
-    <div ng-controller="UserSession">
-      {{string}}
-      <input type="text" ng-model="loginData.email" placeholder='Email'>
-      <input type="password" ng-model="loginData.password" placeholder='Password'>
-      <button ng-click="userSignIn()">Login</button>
+    <div ng-controller="UserSession" class="list eighty_percent">
+      <label class='item item-input'>
+        <input type="text" ng-model="loginData.email" placeholder='Email'>
+      </label>
+      <label class='item item-input'>
+        <input type="password" ng-model="loginData.password" placeholder='Password'>
+      </label>
+      <button class='button button-calm button-block' ng-click="userSignIn()">Login</button>
     </div>
+
   </ion-content>
 </ion-pane>
 </body>
