--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
 
 <ion-pane>
   <ion-header-bar class="bar-stable">
-    <h1 class="title">Ionic Blank Starter</h1>
+    <h1 class="title">Adventure Map</h1>
   </ion-header-bar>
   <ion-content>
     <div ng-controller="UserSession" class="list eighty_percent">
