--- a/www/index.html
+++ b/www/index.html
@@ -35,13 +35,15 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
 </head>
-<body ng-app="adventure-map">
+<body ng-app="adventureMap">
 
 <ion-pane>
-  <ion-header-bar class="bar-stable">
+  <ion-header-bar class="bar-positive">
     <h1 class="title">AdventureMap</h1>
   </ion-header-bar>
-  <ion-nav-view></ion-nav-view>
+  <ion-nav-view>
+
+  </ion-nav-view>
 
 </ion-pane>
 </body>
