--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
   <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
 </head>
 <body ng-app="adventureMap">
 
