--- a/www/index.html
+++ b/www/index.html
@@ -42,9 +42,10 @@
 <body ng-app="adventureMap">
 
 <ion-pane>
-  <ion-header-bar class="bar-positive">
-    <h1 class="title">AdventureMap</h1>
-  </ion-header-bar>
+  <ion-nav-bar class="">
+
+  </ion-nav-bar>
+
   <ion-nav-view>
 
   </ion-nav-view>
