--- a/www/index.html
+++ b/www/index.html
@@ -43,10 +43,15 @@
 
 <ion-pane>
   <ion-nav-bar class="bar-positive">
-
+    <ion-nav-buttons side="left">
+      <a class="button button-clear" nav-transition="none" href="#/activities">Home</a>
+      <button class="button button-clear" ng-if="user.email" ng-controller="activitiesController" ng-click="viewProfile()">
+        <i class="icon ion-ios-person"></i>
+      </button>
+    </ion-nav-buttons>
   </ion-nav-bar>
 
-  <ion-nav-view>
+  <ion-nav-view animation="slide-left-right" hide-nav-bar="true">
 
   </ion-nav-view>
 
