WIP user profile with restricted route access and logout

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 <ion-pane>
   <ion-nav-bar class="bar-positive">
     <ion-nav-buttons side="left">
-      <a class="button button-clear" nav-transition="none" href="#/activities">Home</a>
+      <!--a class="button button-clear" nav-transition="none" href="#/activities">Home</a-->
       <button class="button button-clear" ng-if="user.email" ng-controller="activitiesController" ng-click="viewProfile()">
         <i class="icon ion-ios-person"></i>
       </button>
