--- a/www/index.html
+++ b/www/index.html
@@ -41,15 +41,16 @@
 </head>
 <body ng-app="adventureMap">
 
-<ion-pane>
-  <ion-nav-bar class="bar-positive">
+<!--<ion-pane>-->
 
-  </ion-nav-bar>
 
   <ion-nav-view>
+    <!--<ion-nav-bar class="bar-positive">-->
+
+    <!--</ion-nav-bar>-->
 
   </ion-nav-view>
 
-</ion-pane>
+<!--</ion-pane>-->
 </body>
 </html>
