--- a/www/index.html
+++ b/www/index.html
@@ -45,9 +45,9 @@
 
 
   <ion-nav-view>
-    <!--<ion-nav-bar class="bar-positive">-->
+    <ion-nav-bar class="bar-positive">
 
-    <!--</ion-nav-bar>-->
+    </ion-nav-bar>
 
   </ion-nav-view>
 
