--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/activities_controller.js"></script>
   <script src="js/controllers/user_session_controller.js"></script>
+  <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
 </head>
