--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
   <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
 </head>
 <body ng-app="adventureMap">
 
