--- a/www/index.html
+++ b/www/index.html
@@ -16,14 +16,12 @@
     }
   </script>-->
 
-  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
-  -->
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
