--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
   <script src="js/controllers/activities_controller.js"></script>
   <script src="js/controllers/user_session_controller.js"></script>
   <script src="js/controllers/create_activity_controller.js"></script>
+  <script src="js/controllers/map_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
 </head>
