--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/ionicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href="css/style.css" rel="stylesheet">
 
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -40,6 +41,7 @@
   <script src="js/controllers/user_session_controller.js"></script>
   <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers/map_controller.js"></script>
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
 </head>
