walkthrough and sign-in templates

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
   <script src="js/controllers/show_activity_controller.js"></script>
   <script src="js/controllers/map_controller.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
   <script src="js/directives.js"></script>
   <script src="lib/leaflet/leaflet.js"></script>
@@ -49,9 +50,9 @@
 <body ng-app="adventureMap">
 
 <ion-pane>
-  <ion-nav-bar class="bar-positive">
+  <!--<ion-nav-bar class="bar-positive">
 
-  </ion-nav-bar>
+  </ion-nav-bar>-->
 
   <ion-nav-view animation="slide-left-right" hide-nav-bar="true">
 
