Add leaflet as dependency

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,8 @@
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/ionicons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />-->
+  <link rel="stylesheet" href="css/leaflet.css">
   <link href="css/style.css" rel="stylesheet">
 
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -33,7 +34,6 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
-  <!--<script src="lib/ngCordova/dist/ng-cordova.js"></script>-->
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
@@ -41,9 +41,13 @@
   <script src="js/controllers/user_session_controller.js"></script>
   <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers/map_controller.js"></script>
-  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <!--<script src="lib/leaflet/dist/leaflet-src.map"></script>-->
+  <!--<script src="lib/leaflet/leaflet-src.js"></script>-->
+  <script src="lib/leaflet/leaflet.js"></script>
+
+
 </head>
 <body ng-app="adventureMap">
 
