--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
   <script src="lib/angular-resource/angular-resource.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+  <script src="lib/list.js/dist/list.min.js"></script>
   <script src="cordova.js"></script>
   <!--<script src="lib/ngCordova/dist/ng-cordova.js"></script>-->
 
