--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
   </script>-->
 
   <link href="css/ionicons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/leaflet.css">
+  <link href="css/leaflet.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
     <!-- compiled css output -->
@@ -42,6 +42,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/services/map_service.js"></script>
   <script src="lib/leaflet/leaflet.js"></script>
 
 
