--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
+  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
@@ -38,6 +39,7 @@
   <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers/show_activity_controller.js"></script>
   <script src="js/controllers/map_controller.js"></script>
+  <script src="js/controllers/user_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
