move userController to its own file

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
   <script src="js/controllers/create_activity_controller.js"></script>
   <script src="js/controllers/show_activity_controller.js"></script>
   <script src="js/controllers/map_controller.js"></script>
+  <script src="js/controllers/user_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
