--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,10 @@
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
 
+  <!-- plugins -->
+  <script src="lib/angular-md5/angular-md5.min.js"></script>
+  <script src="lib/identicon/identicon.js"></script>
+
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers/activities_controller.js"></script>
