--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
   <script src="cordova.js"></script>
 
   <!-- plugins -->
+  <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/angular-md5/angular-md5.min.js"></script>
   <script src="lib/identicon/identicon.js"></script>
 
