--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
   <!-- plugins -->
   <script src="lib/angular-md5/angular-md5.min.js"></script>
-  <script src="lib/identicon/identicon.js"></script>
+  <script src="lib/identicon.js/identicon.js"></script>
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
@@ -49,7 +49,7 @@
   <script src="js/services.js"></script>
   <script src="js/services/map_service.js"></script>
   <script src="js/services/s3_file_upload.js"></script>
-  <script src="lib/leaflet/leaflet.js"></script>
+  <script src="lib/leaflet/dist/leaflet.js"></script>
 
 
 </head>
