--- a/www/index.html
+++ b/www/index.html
@@ -38,8 +38,8 @@
 
   <!-- LeafletJS and plugins -->
   <script src="lib/leaflet/leaflet.js"></script>
-  <script src="js/lib/proj4leaflet/proj4-compressed.js"></script>
-  <script src="js/lib/proj4leaflet/proj4leaflet.js"></script>
+  <script src="lib/proj4/dist/proj4.js"></script>
+  <script src="lib/Proj4Leaflet/src/proj4leaflet.js"></script>
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
