setup tab views

--- a/www/index.html
+++ b/www/index.html
@@ -59,9 +59,10 @@
 <body ng-app="adventureMap">
 
 <ion-pane>
-  <!--<ion-nav-bar class="bar-positive">
-
-  </ion-nav-bar>-->
+  <ion-nav-bar class="bar-positive nav-title-slide-ios7">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+  </ion-nav-bar>
 
   <ion-nav-view animation="slide-left-right" hide-nav-bar="true">
 
