Create profileFollowersController, route to page

--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
   <script src="js/controllers/map_controller.js"></script>
   <script src="js/controllers/user_controller.js"></script>
   <script src="js/controllers/profile_controller.js"></script>
+  <script src="js/controllers/profile_followers_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
