--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
   <script src="js/controllers/user_controller.js"></script>
   <script src="js/controllers/profile_controller.js"></script>
   <script src="js/controllers/profile_followers_controller.js"></script>
+  <script src="js/controllers/profile_followings_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
