adds aCarousel library

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
 
     <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
+  <link href="lib/ionic-advanced-carousel/dist/advanced-carousel.min.css" rel="stylesheet" />
+
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -28,6 +30,7 @@
   <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/ngstorage/ngStorage.min.js"></script>
+  <script src="lib/ionic-advanced-carousel/dist/advanced-carousel.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
@@ -56,6 +59,7 @@
   <script src="js/services/s3_file_upload.js"></script>
   <script src="js/services/file_service.js"></script>
   <script src="js/services/utilities_service.js"></script>
+
 </head>
 <body ng-app="adventureMap">
 
