--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,8 @@
   <link href="css/ionicons.min.css" rel="stylesheet">
   <link href="css/leaflet.css" rel="stylesheet">
 
-    <!-- compiled css output -->
+  <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
-  <link href="lib/ionic-advanced-carousel/dist/advanced-carousel.min.css" rel="stylesheet" />
-
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -30,7 +28,7 @@
   <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/ngstorage/ngStorage.min.js"></script>
-  <script src="lib/ionic-advanced-carousel/dist/advanced-carousel.min.js"></script>
+  <script src="lib/ionic-ion-horizontal-scroll-cards/ionic.hscrollcards.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
