--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
   <link href="css/ionicons.min.css" rel="stylesheet">
   <link href="css/leaflet.css" rel="stylesheet">
-  <link href="lib/leaflet.markercluster/dist/MarkerCluster.css" rel="stylesheet">
+  <link href="lib/leaflet.markercluster/dist/MarkerCluster.Default.css" rel="stylesheet">
 
   <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
