--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
   <script src="lib/identicon.js/identicon.js"></script>
 
   <!-- LeafletJS and plugins -->
-  <script src="lib/leaflet/leaflet.js"></script>
+  <script src="lib/leaflet/dist/leaflet.js"></script>
   <script src="lib/proj4/dist/proj4.js"></script>
   <script src="lib/Proj4Leaflet/src/proj4leaflet.js"></script>
   <script src="lib/leaflet-providers/leaflet-providers.js"></script>
