Get mock data and show in view

--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,7 @@
   <script src="js/controllers/map_controller.js"></script>
   <script src="js/controllers/user_controller.js"></script>
   <script src="js/controllers/profile_controller.js"></script>
+  <script src="js/controllers/users_profile_controller.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
